--- a/index.html
+++ b/index.html
@@ -12,62 +12,63 @@
 </head>
 
 <body>
+  <header>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <div class="navbar-brand mb-0 h1">
-        <!-- <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <div class="navbar-brand mb-0 h1">
+          <!-- <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
         <ul class="navbar-nav ml-auto mr-auto">
           <li class="nav-item"> -->
-            <a class="navbar-brand">Welcome to my Website!</a>
+          <a class="navbar-brand">Welcome to my Website!</a>
+        </div>
+
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My CV</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Details</a>
+            </li>
+          </ul>
+        </div>
       </div>
 
+    </nav>
+  </header>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My CV</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact Details</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-
-  </nav>
 
   <main>
-    <br>
+
     <div class="container">
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="facebook-brands.jpg?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="facebook-brands.jpg?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
 
-    <br>
 
     <div class="container">
       <h1>Welcome to my Homepage</h1>
@@ -76,33 +77,28 @@
     </div>
 
     <div class="container bg-dark">
-      <br>
       <div class="row">
-        <div class="col-sm-3">
-          <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
-        </div>
-
-        <div class="col-sm-9">
-          <h1 class="text-white">About Me</h1>
-          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <br>
-          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <br>
+        <div class="media">
+          <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image">
+          <div class="media-body">
+            <h3 class="mt-0 text-white"style="padding-top:20px;">About Me</h3>
+            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="mb-0 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
       </div>
     </div>
 
-    <br>
+
 
     <div class="container">
-      <blockquote class="blockquote text-center bg-#1BE7FF">
+      <blockquote class="blockquote text-center bg-#1BE7FF" style="margin-bottom:30px;">
         <p class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</p>
       </blockquote>
     </div>
 
-    <br>
 
     <div class="container">
       <div class="row">
@@ -112,7 +108,8 @@
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
             <div class="card-body bg-dark ml-auto">
               <h5 class="card-title text-white">My Projects</h5>
-              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
@@ -124,7 +121,8 @@
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
             <div class="card-body bg-dark ml auto">
               <h5 class="card-title text-white">My CV</h5>
-              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
@@ -136,7 +134,8 @@
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
             <div class="card-body bg-dark ml auto">
               <h5 class="card-title text-white">Contact Details</h5>
-              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
@@ -148,34 +147,32 @@
 
   </main>
 
-  <br>
 
   <footer>
     <nav class="navbar navbar-expand-lg navbar-light bg-#1BE7FF">
       <div class="container">
         <div class="navbar-brand mb-0 h1">
 
-      <a class="navbar-brand" href="#">Follow me on Social Media</a>
+          <a class="navbar-brand" href="#">Follow me on Social Media</a>
 
-    </div>
-
+        </div>
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
-              <br>
+
           </li>
           <li class="nav-item">
             <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
-              <br>
+
           </li>
           <li class="nav-item">
             <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
-              <br>
+
           </li>
         </ul>
-    
-    </div>
+
+      </div>
     </nav>
   </footer>
 </body>
