--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My CV</a>
+              <a class="nav-link" href="CV.html">My CV</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Projects</a>
+              <a class="nav-link" href="Projects.html">My Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Details</a>
+              <a class="nav-link" href="Contact.html">Contact Details</a>
             </li>
           </ul>
         </div>
@@ -51,95 +51,97 @@
 
   <main>
 
-<section>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4 text-center font-weight-bold">Welcome to my Website</h1>
-        <p class="lead text-white text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
+    <section>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4 text-center font-weight-bold">Welcome to my Website</h1>
+          <p class="lead text-white text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-<section>
-    <div class="container bg-dark">
-      <div class="row">
-        <div class="media">
-          <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
+    <section>
+      <div class="container bg-dark">
+        <div class="row">
+          <div class="media">
+            <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
             max-height:300px;">
-          <div class="media-body">
-            <h3 class="mt-0 text-white" style="padding-top:20px;">About Me</h3>
-            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="mb-0 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-</section>
-
-<section>
-    <hr class="my-4">
-
-
-    <div class="container">
-      <blockquote class="blockquote text-center bg-#1BE7FF" style="margin-bottom:30px;">
-        <p class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</p>
-      </blockquote>
-    </div>
-
-    <hr class="my-4">
-</section>
-
-<section>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="card bg-light" style="width: 18rem;">
-            <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
-            <div class="card-body bg-dark ml-auto">
-              <h5 class="card-title text-white">My Projects</h5>
-              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum..</p>
-              <a href="#" class="btn btn-primary">Take Me There!</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card bg-light" style="width: 18rem;">
-            <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
-            <div class="card-body bg-dark ml auto">
-              <h5 class="card-title text-white">My CV</h5>
-              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            <div class="media-body">
+              <h3 class="mt-0 text-white" style="padding-top:20px;">About Me</h3>
+              <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="mb-0 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                 laborum.</p>
-              <a href="#" class="btn btn-primary">Take Me There!</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card bg-light" style="width: 18rem;">
-            <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
-            <div class="card-body bg-dark ml auto">
-              <h5 class="card-title text-white">Contact Details</h5>
-              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum.</p>
-              <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <hr class="my-4">
-  </section>
+    <section>
+      <hr class="my-4">
+
+
+      <div class="container">
+        <blockquote class="blockquote text-center bg-#1BE7FF">
+          <p class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</p>
+        </blockquote>
+      </div>
+
+      <hr class="my-4">
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card bg-light" style="width: 18rem;">
+              <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
+              <div class="card-body bg-dark ml-auto">
+                <h5 class="card-title text-white">My Projects</h5>
+                <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea
+                  commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                  laborum..</p>
+                <a href="Projects.html" class="btn btn-primary">Take Me There!</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card bg-light" style="width: 18rem;">
+              <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
+              <div class="card-body bg-dark ml auto">
+                <h5 class="card-title text-white">My CV</h5>
+                <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea
+                  commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                  laborum.</p>
+                <a href="CV.html" class="btn btn-primary">Take Me There!</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card bg-light" style="width: 18rem;">
+              <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
+              <div class="card-body bg-dark ml auto">
+                <h5 class="card-title text-white">Contact Details</h5>
+                <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea
+                  commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                  laborum.</p>
+                <a href="Contact.html" class="btn btn-primary">Take Me There!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr class="my-4">
+    </section>
 
   </main>
 
@@ -149,18 +151,19 @@
     <div class="space">
       <div class="container">
         <div class="row">
-          <div class="navbar-brand col mb-0 h3">
-
+          <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
             <a>Follow me on Social Media</a>
           </div>
 
+
           <div class="col-md-auto">
 
-            <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
-            <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+              <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
-            <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+                <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
+                    style="max-width: 50px; max-height: 50px;">
 
           </div>
         </div>
